--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "scripts": {
     "tsc:watch": "tsc --watch",
     "dev": "concurrently npm:tsc:watch nodemon ./build/main.js",
-    "build": "tsc",
+    "build": "rimraf build && tsc",
     "start:node": "NODE_ENV=production node ./build/main.js",
-    "start:pm2": "pm2 start npm --name 'notes-api' --run 'start:node'"
+    "start:pm2": "pm2 start npm --name 'notes-api' -- run 'start:node'"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +17,8 @@
   "dependencies": {
     "@hapi/hapi": "^21.3.9",
     "nanoid": "^3.3.7",
-    "pm2": "^5.3.1"
+    "pm2": "^5.3.1",
+    "rimraf": "^5.0.7"
   },
   "devDependencies": {
     "@types/hapi": "^18.0.14",
